Bug 1703205 - Don't query AlertNotificationOrigin from RemoteLookAndFeel. r=cmartin

Since it's not read by child processes and it seems it might be
expensive to get on windows.

Differential Revision: https://phabricator.services.mozilla.com/D110908